# EmbeddedLinux

./: README.md  bin_search.c  menu_script.sh  task.sh  task3.sh  task5.sh
Embedded_Linux/: README.md
Embedded_Linux/DynamicLibrary/Lib/: addition.c
Embedded_Linux/SDcard/: SDcard.md
Embedded_Linux/TFTP/: # TFTP Server Setup.md  experiment
Embedded_Linux/UBoot/: Uboot.md
Embedded_Linux/busy_box/: busybox.md  busybox2.md
Embedded_Linux/busy_box /: busybox2.md  nfs.md
Embedded_Linux/cmake_task/cmake/: CMakeLists.txt
Embedded_Linux/cmake_task/cmake_dynamic/: CMakeCache.txt  CMakeLists.txt  Makefile  calculator  cmake_install.cmake
Embedded_Linux/cmake_task/cmake_dynamic/Lib/: CMakeLists.txt  Makefile  cmake_install.cmake
Embedded_Linux/cmake_task/cmake_dynamic/calc/: CMakeCache.txt  CMakeLists.txt  Makefile  calculator  cmake_install.cmake  install_manifest.txt
Embedded_Linux/cmake_task/cmake_static/: CMakeCache.txt  CMakeLists.txt  Makefile  calculator  cmake_install.cmake
Embedded_Linux/cmake_task/cmake_static/Lib/: CMakeLists.txt  Makefile  cmake_install.cmake  division.c
Embedded_Linux/cmake_task/cmake_static/calc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
Embedded_Linux/kernel/: Linux Kernel.md
Embedded_Linux/static_library/Include/: subtraction.h
Embedded_Linux/systemdService/: SystemdService.md
Embedded_Linux/task1/: README.md  Readme.md
Embedded_Linux/task1/DynamicLibrary/: calc  main.c
Embedded_Linux/task1/DynamicLibrary/Include/: addition.h
Embedded_Linux/task1/DynamicLibrary/Lib/: multiplication.c
Embedded_Linux/task1/static_library/: static.objdump
Embedded_Linux/task1/static_library/Include/: modulus.h
Embedded_Linux/task1/static_library/Lib/: modulus.c  subtraction.c
Embedded_Linux/task2/: README.md
Embedded_Linux/task2_2/: README.md
Embedded_Linux/task3/: README.md
Embedded_Linux/task4/: README.md
Embedded_Linux/yocto/: yocto_recipe.md
Embedded_Linux/yocto/helloworld/: helloworld.bb
